--- a/main.html
+++ b/main.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>News Webpage</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+  
+  <header class="header">
+    <h1>News Today</h1>
+  </header>
+
+ 
+  <div class="latest-news-section">
+    <h2>Latest News</h2>
+    <ul>
+      <li>Government passes new tech bill to enhance cybersecurity.</li>
+      <li>International climate summit kicks off in Geneva.</li>
+      <li>Local startups raise $5M in funding this quarter.</li>
+    </ul>
+  </div>
+
+
+  <div class="pictorial-news-section">
+    <h2>Pictorial News</h2>
+    <div class="images">
+      <img src="https://via.placeholder.com/200x150?text=Image_One" alt="Image One">
+      <img src="https://via.placeholder.com/200x150?text=Image_Two" alt="Image Two">
+      <img src="https://via.placeholder.com/200x150?text=Image_Three" alt="Image Three">
+    </div>
+  </div>
 
 </body>
-
 </html>
